# maria-ai-agent

./: .flake8  .gitconfig  .gitignore  .pre-commit-config.yaml  EPIC Requirements.md  Makefile  PORT_CONFIGURATION.md  README.md  bashrc_addition.txt  conftest.py  maria_ai_dev.db  package-lock.json  package.json  pyproject.toml  pytest.ini  refactoring_progress.md  requirements.txt  run-git.sh  run-pre-commit.sh  supabase_schema.sql  test_persist_session.js  test_persist_session_fresh.js  testing_plan.md  upload_story_requirements.md
.github/: copilot-instructions.md
QA/: user_session.md
backend/: .dockerignore  Dockerfile  README-api-session.md  README_monitoring.md  alembic.ini  app.py  config.py  create_migration.py  debug_app.py  debug_orm_app.py  env.example  fly.toml  init_database.py  maria_ai_dev.db  maria_ai_test.db  maria_ai_test.db-shm  maria_ai_test.db-wal  monitor_email_verification.py  persist_session.py  pytest.ini  requirements.txt  run_migrations.py  run_supabase_migrations.py  setup_db.py  setup_test_db.py  test_app.py  test_email_sending.py  test_orm_app.py  test_persist_session.py  test_upload.py  upload_with_uuid.py  wsgi.py
backend/crewai/: pyproject.toml
backend/crewai/src/maria_ai_agent/: crew.py  main.py
docs/: README.md
frontend/: .dockerignore  .eslintrc.json  .prettierrc  Dockerfile  README-fsm.md  README.md  config.py  env.example  jest.config.js  next-steps.md  nginx.conf  package-lock.json  package.json  run.py  vercel.json
misc/: questions.md
prompts/: User Session.md  check for where to start  code_refactor.md  (+3 more)
(+341 files in other folders)
