[project]
name = "maria_ai_agent"
version = "0.1.0"
description = "maria-ai-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
maria_ai_agent = "maria_ai_agent.main:run"
run_crew = "maria_ai_agent.main:run"
train = "maria_ai_agent.main:train"
replay = "maria_ai_agent.main:replay"
test = "maria_ai_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
